--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -9,8 +9,8 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/currencyform">Link 1</a>
-      <a mat-list-item routerLink="/currencylist">Link 2</a>
+      <a mat-list-item routerLink="/currencyform">Formulaire devise</a>
+      <a mat-list-item routerLink="/currencylist">Liste devise</a>
       <a mat-list-item routerLink="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
