--- a/src/app/agency/agency-form/agency-form.component.html
+++ b/src/app/agency/agency-form/agency-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="currencyForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="agencyForm" (ngSubmit)="onSubmit()">
   <div class="bottomBorder">
     <div class="container">
       <mat-grid-list cols="2" rowHeight="16:1">
@@ -9,14 +9,14 @@
               class="blueButton"
               type="submit"
               value="Valider"
-              [disabled]="!currencyForm.valid"
+              [disabled]="!agencyForm.valid"
             >
               Valider
             </button>
             <button mat-button class="blueButton" (click)="reset()">
               Rénitialiser
             </button>
-            <button mat-button class="blueButton" routerLink="/currencyList">
+            <button mat-button class="blueButton" routerLink="/agencyList">
               Annuler
             </button>
           </div>
@@ -29,39 +29,36 @@
     <mat-grid-list cols="2" rowHeight="6:1">
       <mat-grid-tile>
         <mat-form-field class="formField">
-          <mat-label>Le code </mat-label>
-          <input matInput type="text" formControlName="code" />
-        </mat-form-field>
-      </mat-grid-tile>
-
-      <mat-grid-tile>
-        <mat-form-field class="formField">
-          <mat-label>Le nom </mat-label>
+          <mat-label>Nom </mat-label>
           <input matInput type="text" formControlName="nom" />
         </mat-form-field>
       </mat-grid-tile>
 
       <mat-grid-tile>
         <mat-form-field class="formField">
-          <mat-label>Le code alpha </mat-label>
-          <input matInput type="text" formControlName="alphaCode" />
+          <mat-label>Adresse</mat-label>
+          <input matInput type="text" formControlName="adresse" />
         </mat-form-field>
       </mat-grid-tile>
 
       <mat-grid-tile>
         <mat-form-field class="formField">
-          <mat-label>Le code ISO </mat-label>
-          <input matInput type="text" formControlName="isoCode" />
+          <mat-label>Fax</mat-label>
+          <input matInput type="text" formControlName="fax" />
         </mat-form-field>
       </mat-grid-tile>
 
       <mat-grid-tile>
-        <mat-form-field class="formField" colspan="2">
-          <mat-label>La langue</mat-label>
-          <mat-select disableRipple formControlName="langue">
-            <mat-option value="fr">Français</mat-option>
-            <mat-option value="ang">Anglais</mat-option>
-          </mat-select>
+        <mat-form-field class="formField">
+          <mat-label>Telephone</mat-label>
+          <input matInput type="text" formControlName="telephone" />
+        </mat-form-field>
+      </mat-grid-tile>
+
+      <mat-grid-tile>
+        <mat-form-field class="formField">
+          <mat-label>Email</mat-label>
+          <input matInput type="text" formControlName="email" />
         </mat-form-field>
       </mat-grid-tile>
     </mat-grid-list>
