--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -9,9 +9,10 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/currencyform">Formulaire devise</a>
-      <a mat-list-item routerLink="/currencylist">Liste devise</a>
-      <a mat-list-item routerLink="#">Link 3</a>
+      <a mat-list-item routerLink="/currencyList">DEVISES</a>
+      <a mat-list-item routerLink="/agencyList">AGENCES</a>
+      <a mat-list-item routerLink="/agentList">AGENTS</a>
+      <a mat-list-item routerLink="/adminList">ADMINS</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -25,7 +26,28 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>front-ebanking</span>
+
+      <div fxFlex fxLayout="row" fxLayoutAlign="flex-end">
+        <ul fxLayout="row" fxLayoutGap="20px">
+          <li>
+            <button mat-icon-button>
+              <mat-icon>settings</mat-icon>
+            </button>
+          </li>
+
+          <li>
+            <button mat-button [matMenuTriggerFor]="signOut">
+              <mat-icon>person_outline</mat-icon>
+            </button>
+            <mat-menu #signOut="matMenu">
+              <button mat-menu-item>
+                <mat-icon>exit_to_app</mat-icon>
+                Se déconnecter
+              </button>
+            </mat-menu>
+          </li>
+        </ul>
+      </div>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
