--- a/src/app/agent/agent-item/agent-item.component.html
+++ b/src/app/agent/agent-item/agent-item.component.html
@@ -11,11 +11,9 @@
               value="Valider"
               [disabled]="!agentForm.valid"
             >
-              Valider
+              Modifier
             </button>
-            <button mat-button class="blueButton" (click)="reset()">
-              Rénitialiser
-            </button>
+
             <button mat-button class="blueButton" (click)="goBack()">
               Annuler
             </button>
