--- a/src/app/agency/agency-list/agency-list.component.html
+++ b/src/app/agency/agency-list/agency-list.component.html
@@ -4,7 +4,7 @@
       <mat-grid-tile class="fullheight">
         <div fxFlex fxLayoutAlign="start center">
           <button mat-button class="blueButton" routerLink="/agencyForm">
-            AJOUTER
+            Ajouter
           </button>
         </div>
       </mat-grid-tile>
@@ -56,8 +56,22 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" (click)="deleteAgency(element.id)">
+        <button mat-icon-button color="warn" (click)="openDialog(element.id)">
           <mat-icon>delete</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="goToAgencyItem(element.id)"
+        >
+          <mat-icon>update</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          [routerLink]="['/agency', element.id, 'agentList']"
+        >
+          <mat-icon>people_outline</mat-icon>
         </button>
       </td>
     </ng-container>
