--- a/src/app/agent/agent-list/agent-list.component.html
+++ b/src/app/agent/agent-list/agent-list.component.html
@@ -3,7 +3,7 @@
     <mat-grid-list cols="2" rowHeight="16:1">
       <mat-grid-tile class="fullheight">
         <div fxFlex fxLayoutAlign="start center">
-          <button mat-button class="blueButton" routerLink="/agentForm">
+          <button mat-button class="blueButton" (click)="goToForm()">
             AJOUTER
           </button>
         </div>
@@ -71,8 +71,15 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" (click)="deleteAgent(element.id)">
+        <button mat-icon-button color="warn" (click)="openDialog(element.id)">
           <mat-icon>delete</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="goToAgents(element.id)"
+        >
+          <mat-icon>update</mat-icon>
         </button>
       </td>
     </ng-container>
