--- a/src/app/currency/currency-list/currency-list.component.html
+++ b/src/app/currency/currency-list/currency-list.component.html
@@ -4,7 +4,7 @@
       <mat-grid-tile class="fullheight">
         <div fxFlex fxLayoutAlign="start center">
           <button mat-button class="blueButton" routerLink="/currencyForm">
-            CREER
+            Ajouter
           </button>
         </div>
       </mat-grid-tile>
@@ -24,7 +24,7 @@
 <div class="container">
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <th mat-header-cell *matHeaderCellDef>Code</th>
       <td mat-cell *matCellDef="let element">{{ element.code }}</td>
     </ng-container>
 
@@ -51,12 +51,15 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button
-          mat-mini-fab
-          color="warn"
-          (click)="deleteCurrency(element.code)"
-        >
+        <button mat-icon-button color="warn" (click)="openDialog(element.code)">
           <mat-icon>delete</mat-icon>
+        </button>
+        <button
+          mat-icon-button
+          color="primary"
+          (click)="goToCurrencyItem(element.code)"
+        >
+          <mat-icon>update</mat-icon>
         </button>
       </td>
     </ng-container>
@@ -65,5 +68,8 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+  ></mat-paginator>
 </div>
