--- a/src/app/admin/admin-form/admin-form.component.html
+++ b/src/app/admin/admin-form/admin-form.component.html
@@ -16,7 +16,11 @@
             <button mat-button class="blueButton" (click)="reset()">
               Rénitialiser
             </button>
-            <button mat-button class="blueButton" routerLink="/adminList">
+            <button
+              mat-button
+              class="blueButton"
+              routerLink="/overview/adminList"
+            >
               Annuler
             </button>
           </div>
