--- a/src/app/agency/agency-item/agency-item.component.html
+++ b/src/app/agency/agency-item/agency-item.component.html
@@ -13,7 +13,11 @@
             >
               Modifier
             </button>
-            <button mat-button class="blueButton" routerLink="/agencyList">
+            <button
+              mat-button
+              class="blueButton"
+              routerLink="/overview//agencyList"
+            >
               Annuler
             </button>
           </div>
