--- a/src/app/currency/currency-form/currency-form.component.html
+++ b/src/app/currency/currency-form/currency-form.component.html
@@ -16,7 +16,11 @@
             <button mat-button class="blueButton" (click)="reset()">
               Rénitialiser
             </button>
-            <button mat-button class="blueButton" routerLink="/currencyList">
+            <button
+              mat-button
+              class="blueButton"
+              routerLink="/overview/currencyList"
+            >
               Annuler
             </button>
           </div>
