--- a/src/app/currency/currency-list/currency-list.component.html
+++ b/src/app/currency/currency-list/currency-list.component.html
@@ -3,7 +3,11 @@
     <mat-grid-list cols="2" rowHeight="16:1">
       <mat-grid-tile class="fullheight">
         <div fxFlex fxLayoutAlign="start center">
-          <button mat-button class="blueButton" routerLink="/currencyForm">
+          <button
+            mat-button
+            class="blueButton"
+            routerLink="/overview/currencyForm"
+          >
             Ajouter
           </button>
         </div>
