--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -3,7 +3,11 @@
     <mat-grid-list cols="2" rowHeight="16:1">
       <mat-grid-tile class="fullheight">
         <div fxFlex fxLayoutAlign="start center">
-          <button mat-button class="blueButton" routerLink="/adminForm">
+          <button
+            mat-button
+            class="blueButton"
+            routerLink="/overview//adminForm"
+          >
             AJOUTER
           </button>
         </div>
@@ -66,7 +70,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let element">
-        <button mat-mini-fab color="warn" (click)="deleteAgent(element.id)">
+        <button mat-icon-button color="warn" (click)="openDialog(element.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
