--- a/src/app/agency/agency-form/agency-form.component.html
+++ b/src/app/agency/agency-form/agency-form.component.html
@@ -16,7 +16,11 @@
             <button mat-button class="blueButton" (click)="reset()">
               Rénitialiser
             </button>
-            <button mat-button class="blueButton" routerLink="/agencyList">
+            <button
+              mat-button
+              class="blueButton"
+              routerLink="/overview//agencyList"
+            >
               Annuler
             </button>
           </div>
