--- a/src/app/currency/currency-item/currency-item.component.html
+++ b/src/app/currency/currency-item/currency-item.component.html
@@ -8,7 +8,11 @@
               Modifier
             </button>
 
-            <button mat-button class="blueButton" routerLink="/currencyList">
+            <button
+              mat-button
+              class="blueButton"
+              routerLink="/overview/currencyList"
+            >
               Annuler
             </button>
           </div>
