--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -9,10 +9,10 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/currencyList">DEVISES</a>
-      <a mat-list-item routerLink="/agencyList">AGENCES</a>
+      <a mat-list-item routerLink="currencyList">DEVISES</a>
+      <a mat-list-item routerLink="agencyList">AGENCES</a>
 
-      <a mat-list-item routerLink="/adminList">ADMINS</a>
+      <a mat-list-item routerLink="adminList">ADMINS</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
