--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -40,7 +40,7 @@
               <mat-icon>person_outline</mat-icon>
             </button>
             <mat-menu #signOut="matMenu">
-              <button mat-menu-item>
+              <button mat-menu-item (click)="logOut()">
                 <mat-icon>exit_to_app</mat-icon>
                 Se déconnecter
               </button>
